@@ -10,6 +10,7 @@ Nagios 3.x Change Log
 * Fix for improper notification propagation command processing
 * Better out-of-disk-space error handling when writing retention and status files
 * Disabled adaptive check and eventhandler commands for security reasons
+* Fix for reading output from system commands (event handlers, etc) that have timed out
 
 
 
